nzbget/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app.kubernetes.io/name: nzbget
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nzbget
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nzbget
    spec:
      containers:
      - name: nzbget
        image: ghcr.io/linuxserver/nzbget
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6789
          name: http
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 60
        readinessProbe:
          tcpSocket:
            port: http
        resources:
          limits:
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 300Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: media
          subPath: Scratch/Download/NZBGet
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nzbget-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
