nzbget/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
      kind: Gateway
  hostnames:
    - db3000.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /nzbget
      backendRefs:
        - name: nzbget
          port: 80
          kind: Service
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
