nzbget/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget
  labels:
    app.kubernetes.io/name: nzbget
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`db3000.xmple.io`) && PathPrefix(`/nzbget/`)
      kind: Rule
      services:
        - name: nzbget
          port: 80
      middlewares:
        - name: forwardauth-authelia
  tls:
    secretName: db3000-tls
    options:
      name: mintls13
      namespace: traefik
